<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityResposta">



    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/ic_logo_foreground"
        android:contentDescription="@string/fotologo" />
    <TextView
        android:id="@+id/examen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examen_tipus_test_2_dam"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/usuari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usuari"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/pregunta1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/pregunta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pregunta_1"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/resposta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/resposta_1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/pregunta1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/pregunta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pregunta_2"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/resposta1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/resposta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/resposta_2"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/pregunta2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/pregunta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pregunta_3"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/resposta2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/resposta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/resposta_3"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/pregunta3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/pregunta4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pregunta_4"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/resposta3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/resposta4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/resposta_4"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/pregunta4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/pregunta5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pregunta_5"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/resposta4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/resposta5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/resposta_5"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/pregunta5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/puntuacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/puntuaci"
        app:layout_constraintTop_toBottomOf="@+id/resposta5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>