<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPreguntes">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/ic_logo_foreground"
        android:contentDescription="@string/fotologo" />
    <TextView
        android:id="@+id/examen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examen_tipus_test_2_dam"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fc1"
        android:layout_width="350dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/examen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout = "@layout/fragment_p1"
        />

    <Button
        android:id="@+id/btmEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fc1"
        android:text="@string/enviar" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/fb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/fb2"
        android:src="@android:drawable/arrow_down_float"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btmEnviar"
        android:contentDescription="@string/fbdown" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/arrow_up_float"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fb1"
        app:layout_constraintTop_toBottomOf="@+id/btmEnviar"
        android:contentDescription="@string/fbup" />


</androidx.constraintlayout.widget.ConstraintLayout>